Solved wrapping but big gaps between rows

--- a/static/css/Gamefield.css
+++ b/static/css/Gamefield.css
@@ -8,6 +8,8 @@ body {
     width: 40em;
     height: 32em;
     margin: 0.5em; /* equal to 4px */
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .tile {
